--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ allprojects{
         provided
         compile.extendsFrom provided
         deployerJars
+        // 使用logback进行日志输出排除log4j相关依赖
         all*.exclude group: 'log4j'
         all*.exclude group: 'org.slf4j',  module: 'slf4j-log4j12'
         all*.exclude module: 'commons-logging'
@@ -161,6 +162,7 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok:1.18.6'
         compile "org.springframework.data:spring-data-redis:${springBootVersion}"
 
+        // 使用skywalking logback进行日志输出
         compile "org.apache.skywalking:apm-toolkit-logback-1.x:6.5.0"
 
         compile "org.quartz-scheduler:quartz:2.3.2"
