--- a/Learning-web/src/main/resources/application-local.properties
+++ b/Learning-web/src/main/resources/application-local.properties
@@ -54,3 +54,10 @@ datasource.jdbc.elastic.job.maxWait=5000
 
 #\u662F\u5426\u5F00\u542F\u5B9A\u65F6\u4EFB\u52A1
 wonderfulness.elasticJob.job.onOff=true
+
+
+# **********************  ThreadPool 配置 *********************************
+threadPool.codeSize=10
+threadPool.maxSize=10
+threadPool.keepAliveSeconds=10
+threadPool.queueLength=1000
