--- a/Learning-web/build.gradle
+++ b/Learning-web/build.gradle
@@ -4,11 +4,22 @@ dependencies {
 	compile project(':Learning-core')
 
 	compile "junit:junit:4.12"
+
+	// 实现对 Spring MVC 的自动配置
 	implementation('org.springframework.boot:spring-boot-starter-web') {
 		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// 引入 Swagger 依赖
+	compile "io.springfox:springfox-swagger2:2.9.2"
+
+	// 引入 Swagger UI 依赖，以实现 API 接口的 UI 界面
+	compile "io.springfox:springfox-swagger-ui:2.9.2"
+
+	// 实现对 Swagger 的自动配置
+//	implementation "io.springfox:springfox-boot-starter:3.0.0"
 
 }
 
