--- a/build.gradle
+++ b/build.gradle
@@ -69,9 +69,9 @@ allprojects{
         //支付宝支付 SDK
         all*.exclude group: "com.alipay.sdk"
         // API 开发工具 swagger 的东西 用不到
-        all*.exclude group: "io.springfox"
+//        all*.exclude group: "io.springfox"
         // API 开发工具 swagger
-        all*.exclude group: "io.swagger"
+//        all*.exclude group: "io.swagger"
         //前后端分离了都 留着 JSP 考古吗
         all*.exclude group: "javax.servlet.jsp"
         //处理控制台输入的类库，Web 项目要这玩意干嘛？
